WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180055
REGRESSION (
r225142
): Crashes when command clicking or force touching links
https://bugs.webkit.org/show_bug.cgi?id=180055
Summary
REGRESSION (r225142): Crashes when command clicking or force touching links
Tim Horton
Reported
2017-11-27 14:01:34 PST
REGRESSION (
r225142
): Crashes when command clicking or force touching links
Attachments
Patch
(1.85 KB, patch)
2017-11-27 14:02 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-11-27 14:02:08 PST
Created
attachment 327676
[details]
Patch
Tim Horton
Comment 2
2017-11-27 14:02:42 PST
This reverts part of Darin’s patch, so I’d like to understand why he did it in the first place.
WebKit Commit Bot
Comment 3
2017-11-27 15:04:36 PST
Comment on
attachment 327676
[details]
Patch Clearing flags on attachment: 327676 Committed
r225196
: <
https://trac.webkit.org/changeset/225196
>
WebKit Commit Bot
Comment 4
2017-11-27 15:04:38 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-11-27 15:05:27 PST
<
rdar://problem/35708902
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug