REGRESSION (r225142): Crashes when command clicking or force touching links https://bugs.webkit.org/show_bug.cgi?id=180055 <rdar://problem/35703910>

Reviewed by Wenson Hsieh.

No new tests; affects an existing API test.

* editing/mac/DictionaryLookup.mm:
(WebCore::tokenRange):
The 'options' out argument from tokenRangeForString is autoreleased.


Canonical link: https://commits.webkit.org/196057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225196 268f45cc-cd09-0410-ab3c-d52691b4dbfc